tests/paczka1/fuzzy1/56036092.err
Error in line 1: S162 A547 51,2
Error in line 4: kCyk8EYY A547 39,5
Error in line 6: kCyk8EYY A118 35,5
Error in line 15: ZfK A547 89,6
Error in line 8: A30Y3 S295 26,1
